cabal-version: 2.4
name: website
version: 0.1.0.0
license: BSD-3-Clause
maintainer: aforemny@posteo.de
author: Alexander Foremny
category: Web

executable website
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -fno-warn-missing-signatures
    build-depends:
        aeson,
        base,
        clay,
        filepath,
        lucid,
        rib,
        shake,
        text,
        time,
        with-utf8
